added additional bootstrap styling

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -12,7 +12,12 @@
 .fa-user-circle-o,
 .fa-key,
 .fa-user-plus,
-.fa-sign-in
+.fa-sign-in,
+.fa-diamond,
+.fa-object-group,
+.fa-rss,
+.fa-shopping-bag,
+.fa-bookmark-o
 {
     font-size: 100px;
     font-size: 100px;
