--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,10 +1,12 @@
-<div class="container">
-  <p>Title: <%= @entry.title %></p>
-  <p>URL: <%= link_to @entry.url %> </p>
-  <p>Author: <%= @entry.author %></p>
-  <p>Published Date: <%= @entry.published %></p>
-</div>
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1500px" id="band">
+  <%= link_to "Go Back", :back, class: "w3-left w3-button w3-purple w3-round-large w3-border-purple" %>
+  <h2><%= @entry.title %></h2>
+  <h4>By <%= @entry.author %></h4>
+  <h6>Published On <%= @entry.published %></h6>
 
-<div id="entry">
-  <%= @entry.valid_content.html_safe %>
+  <hr>
+
+  <div id="entry">
+    <%= @entry.valid_content.html_safe %>
+  </div>
 </div>
