--- a/app/views/product_categories/_form_edit.html.erb
+++ b/app/views/product_categories/_form_edit.html.erb
@@ -1,14 +1,12 @@
 <!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
 Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-  <h2>Create Feed</h2>
+  <h2>Edit Product Category Link</h2>
 
   <div class="w3-modal-content w3-card-4" style="max-width:600px">
     <div class="w3-center"><br>
       <i class="fa fa-object-group" aria-hidden="true" class="w3-circle w3-margin-top"></i>
-
       <%= form_with(model: product_category) do |f| %>
-
         <form class="w3-container">
           <div class="w3-section">
 
@@ -23,7 +21,7 @@ Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
             </div>
 
             <div class="form-group w3-padding">
-              <%= f.submit "Create Product Category Link", class: 'w3-button w3-green w3-block w3-section w3-padding', :required => true %>
+              <%= f.submit "Update", class: 'w3-button w3-green w3-block w3-section w3-padding', :required => true %>
             </div>
 
           </div>
@@ -31,6 +29,8 @@ Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
       <% end %>
 
       <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <%= link_to "Cancel", @product_category, class: 'w3-button w3-red w3-round-large w3-border-red w3-margin' %>
+        <br>
         <%= link_to "Back to product categories", product_categories_path %>
       </div>
 
