--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,17 +1,36 @@
-<p style="color: green"><%= notice %></p>
+<!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px" id="band">
+  <h2>Categories (<%= @categories.count %>)</h2>
 
-<h1>Categories (<%= @categories.count %>)</h1>
+  <div class="w3-modal-content w3-card-4" style="max-width:600px">
+    <div class="w3-center"><br>
+      <i class="fa fa-bookmark-o" aria-hidden="true" class="w3-circle w3-margin-top"></i>
 
-<%= link_to "New category", new_category_path %>
-<%= link_to "Assign product to category", product_categories_path %>
+      <form class="w3-container">
+        <div class="w3-section">
 
-<ol>
-  <% @categories.each do |category| %>
-  <li>
-    <%= link_to category do %>
-      <%= category.title %>
-      (<%= category.products.count %> product(s))
-    <% end %>
-  </li>
-  <% end %>
-</ol>
+          <hr>
+          <ol>
+            <% @categories.each do |category| %>
+              <li>
+                <%= link_to category do %>
+                  <%= category.title %>
+                  (<%= category.products.count %> product(s))
+                <% end %>
+              </li>
+            <% end %>
+          </ol>
+          <hr>
+
+        </div>
+      </form>
+
+      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <%= link_to "New category", new_category_path %>
+        <%= link_to "Assign product to category", product_categories_path %>
+      </div>
+
+    </div>
+  </div>
+</div>
