--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,30 +2,36 @@
 
 <%= render @category %>
 
-<div>
-  <%= link_to "Edit this category", edit_category_path(@category) %> |
-  <%= link_to "Back to categories", categories_path %>
-  <%= button_to "Destroy this category", @category, method: :delete %>
+
+
+<!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1500px" id="band">
+
+  <h2><%= @category.title %></h2>
+
+  <div>
+    <%= link_to "Edit Category", edit_category_path(@category), class: 'w3-left w3-button w3-green w3-round-large w3-border-green w3-margin' %>
+    <%= button_to "Delete Category", @category, method: :delete, class: 'w3-left w3-button w3-red w3-round-large w3-border-red w3-margin' %>
+    <%= link_to "Back to categories", categories_path, class: 'w3-right w3-button w3-blue w3-round-large w3-border-blue w3-margin' %>
+  </div>
+
+  <div class="w3-container">
+    <% @product.each do |product|%>
+      <div class="w3-col l3 s6">
+        <div class="w3-container">
+          <%= image_tag "products/#{product.image_filename}", :style => "width:100%"%>
+          <p><%= product.product_name %>
+            <br>
+            <b><%= product.net_price %></b>
+            <br>
+            <%= product.product_description %>
+            <br>
+            <%= link_to "Show this product", product, class: 'w3-button w3-medium w3-purple w3-round-large w3-border-purple w3-margin' %>
+          </p>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </div>
 
-
-<% @product.each do |product|%>
-  <div class="card">
-    <%= image_tag("products/#{product.image_filename}") %>
-
-    <h1>This is by cat
-      <%= product.product_name %>
-    </h1>
-    <p class="price">
-      <%= product.net_price %>
-    </p>
-    <p>
-      <%= product.product_description %>
-    </p>
-    <p>
-      <button>
-        <%= link_to "Show this product", product %>
-      </button>
-    </p>
-  </div>
-<% end %>
