--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -1,42 +1,43 @@
-<h1>
-  Feed Entries
-</h1>
-<table style="width:100%">
-<!--  <tr>-->
-<!--    <th colspan="6">Feed Entries</th>-->
-<!--  </tr>-->
-  <tr>
-    <th>Entry ID</th>
-    <th>Entry Title</th>
-    <th>Published Date</th>
-    <th>Author</th>
-    <th>Feed</th>
-    <th>Content Available</th>
-  </tr>
-  <% @entries.each do |entry| %>
-  <tr>
-    <td>
-      <%= entry.id %>
-    </td>
-    <td>
-      <%= link_to entry.title, entry %>
-    </td>
-    <td>
-      <%= entry.published.strftime("%Y-%m-%d") %>
-    </td>
-    <td>
-      <%= entry.author %>
-    </td>
-    <td>
-      <%= entry.feed.name %>
-    </td>
-    <td>
-      <% if entry.content == nil %>
-        False
-      <% else %>
-        True
-      <% end %>
-    </td>
-  </tr>
-  <% end %>
-</table>
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1500px" id="band">
+  <%= link_to "Go Back", :back, class: "w3-left w3-button w3-purple w3-round-large w3-border-purple" %>
+  <h2>Data Entries</h2>
+  <table style="width:100%">
+  <!--  <tr>-->
+  <!--    <th colspan="6">Feed Entries</th>-->
+  <!--  </tr>-->
+    <tr>
+      <th>Entry ID</th>
+      <th>Entry Title</th>
+      <th>Published Date</th>
+      <th>Author</th>
+      <th>Feed</th>
+      <th>Content Available</th>
+    </tr>
+    <% @entries.each do |entry| %>
+    <tr>
+      <td>
+        <%= entry.id %>
+      </td>
+      <td>
+        <%= link_to entry.title, entry %>
+      </td>
+      <td>
+        <%= entry.published.strftime("%Y-%m-%d") %>
+      </td>
+      <td>
+        <%= entry.author %>
+      </td>
+      <td>
+        <%= entry.feed.name %>
+      </td>
+      <td>
+        <% if entry.content == nil %>
+          False
+        <% else %>
+          True
+        <% end %>
+      </td>
+    </tr>
+    <% end %>
+  </table>
+</div>
