--- a/app/views/feeds/_form_edit.html.erb
+++ b/app/views/feeds/_form_edit.html.erb
@@ -1,14 +1,12 @@
 <!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
 Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-  <h2>Create Feed</h2>
+  <h2>Edit Feed</h2>
 
   <div class="w3-modal-content w3-card-4" style="max-width:600px">
     <div class="w3-center"><br>
       <i class="fa fa-rss" aria-hidden="true" class="w3-circle w3-margin-top"></i>
-
       <%= form_with(model: feed) do |f| %>
-
         <form class="w3-container">
           <div class="w3-section">
 
@@ -28,7 +26,7 @@ Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
             </div>
 
             <div class="form-group w3-padding">
-              <%= f.submit "Create Feed", class: 'w3-button w3-green w3-block w3-section w3-padding', :required => true %>
+              <%= f.submit "Update", class: 'w3-button w3-green w3-block w3-section w3-padding', :required => true %>
             </div>
 
           </div>
@@ -36,6 +34,8 @@ Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
       <% end %>
 
       <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <%= link_to "Show this feed", @feed %>
+        <br>
         <%= link_to "Back to feeds", feeds_path %>
       </div>
 
