--- a/app/views/feeds/edit.html.erb
+++ b/app/views/feeds/edit.html.erb
@@ -1,10 +1,1 @@
-<h1>Editing feed</h1>
-
-<%= render "form", feed: @feed %>
-
-<br>
-
-<div>
-  <%= link_to "Show this feed", @feed %> |
-  <%= link_to "Back to feeds", feeds_path %>
-</div>
+<%= render "form_edit", feed: @feed %>
