--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,54 +1,53 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Orders</h1>
-<table style="width:100%">
-<!--  <tr>-->
-<!--    <th colspan="10">Orders List</th>-->
-<!--  </tr>-->
-  <tr>
-    <th>ID</th>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Sub Total</th>
-    <th>Total</th>
-    <th>Status</th>
-    <th>User ID</th>
-    <th>Created On</th>
-    <th>Last Updated</th>
-    <th>View</th>
-  </tr>
-  <% @orders.each do |order| %>
+<!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1500px" id="band">
+  <h2>Orders</h2>
+  <table style="width:100%">
     <tr>
-      <td>
-        <%= order.id %>
-      </td>
-      <td>
-        <%= order.first_name %>
-      </td>
-      <td>
-        <%= order.last_name %>
-      </td>
-      <td>
-        <%= order.sub_total %>
-      </td>
-      <td>
-        <%= order.total %>
-      </td>
-      <td>
-        <%= order.status %>
-      </td>
-      <td>
-        <%= order.user_id %>
-      </td>
-      <td>
-        <%= order.created_at %>
-      </td>
-      <td>
-        <%= order.updated_at %>
-      </td>
-      <td>
-        <%= link_to "Show this order", order %>
-      </td>
-    </tr>
-  <% end %>
-</table>
+        <th>Order ID</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Sub Total</th>
+        <th>Total</th>
+        <th>Status</th>
+        <th>User ID</th>
+        <th>Created On</th>
+        <th>Last Updated</th>
+        <th>View</th>
+      </tr>
+      <% @orders.each do |order| %>
+        <tr>
+          <td>
+            <%= order.id %>
+          </td>
+          <td>
+            <%= order.first_name %>
+          </td>
+          <td>
+            <%= order.last_name %>
+          </td>
+          <td>
+            <%= order.sub_total %>
+          </td>
+          <td>
+            <%= order.total %>
+          </td>
+          <td>
+            <%= order.status %>
+          </td>
+          <td>
+            <%= order.user_id %>
+          </td>
+          <td>
+            <%= order.created_at %>
+          </td>
+          <td>
+            <%= order.updated_at %>
+          </td>
+          <td>
+            <%= link_to "Show Order", order, class: 'w3-button w3-small w3-purple w3-round-large w3-border-purple' %>
+          </td>
+        </tr>
+    <% end %>
+    </table>
+</div>
