--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,10 +1,51 @@
-<p style="color: green"><%= notice %></p>
+<!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px" id="band">
+  <h2>Order Details</h2>
 
-<%= render @order %>
+  <div class="w3-modal-content w3-card-4" style="max-width:600px">
+    <div class="w3-center"><br>
+      <i class="fa fa-shopping-bag" aria-hidden="true" class="w3-circle w3-margin-top"></i>
 
-<div>
-  <%= link_to "Edit this order", edit_order_path(@order) %> |
-  <%= link_to "Back to orders", orders_path %>
+      <form class="w3-container">
+        <div class="w3-section">
 
-  <%= button_to "Destroy this order", @order, method: :delete %>
+          <hr>
+          <p>
+            <label><b>First Name:</b></label>
+            <%= @order.first_name %>
+          </p>
+          <p>
+            <label><b>Last Name:</b></label>
+            <%= @order.last_name %>
+          </p>
+          <p>
+            <label><b>Sub Total:</b></label>
+            <%= @order.sub_total %>
+          </p>
+          <p>
+            <label><b>Total:</b></label>
+            <%= @order.total %>
+          </p>
+          <p>
+            <label><b>User ID:</b></label>
+            <%= @order.user_id %>
+          </p>
+          <hr>
+
+        </div>
+      </form>
+
+      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <%#= link_to "Edit", edit_order_path(@order), class: 'w3-left w3-button w3-blue w3-round-large w3-border-blue w3-margin' %>
+        <%= button_to "Delete", @order, class: 'w3-button w3-red w3-round-large w3-border-red w3-margin', method: :delete %>
+      </div>
+
+      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <%= link_to "Back to orders", orders_path %>
+      </div>
+
+    </div>
+  </div>
 </div>
+
