--- a/app/views/product_categories/show.html.erb
+++ b/app/views/product_categories/show.html.erb
@@ -1,10 +1,42 @@
-<p style="color: green"><%= notice %></p>
+<!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px" id="band">
+  <h2>Product - Category Link Details</h2>
 
-<%= render @product_category %>
+  <div class="w3-modal-content w3-card-4" style="max-width:600px">
+    <div class="w3-center"><br>
+      <i class="fa fa-object-group" aria-hidden="true" class="w3-circle w3-margin-top"></i>
 
-<div>
-  <%= link_to "Edit this product category", edit_product_category_path(@product_category) %> |
-  <%= link_to "Back to product categories", product_categories_path %>
+      <form class="w3-container">
+        <div class="w3-section">
 
-  <%= button_to "Destroy this product category", @product_category, method: :delete %>
+          <hr>
+          <p>
+            <label><b>Link ID:</b></label>
+            <%= @product_category.id %>
+          </p>
+          <p>
+            <label><b>Product ID:</b></label>
+            <%= @product_category.product_id %>
+          </p>
+          <p>
+            <label><b>Category ID:</b></label>
+            <%= @product_category.category_id %>
+          </p>
+          <hr>
+
+        </div>
+      </form>
+
+      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <%= link_to "Edit", edit_product_category_path(@product_category), class: 'w3-left w3-button w3-blue w3-round-large w3-border-blue w3-margin' %>
+        <%= button_to "Delete", @product_category, class: 'w3-right w3-button w3-red w3-round-large w3-border-red w3-margin', method: :delete %>
+      </div>
+
+      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <%= link_to "Back to product categories", product_categories_path %>
+      </div>
+
+    </div>
+  </div>
 </div>
