--- a/app/views/products/_form_edit.html.erb
+++ b/app/views/products/_form_edit.html.erb
@@ -1,7 +1,7 @@
 <!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
 Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-  <h2>Create Product</h2>
+  <h2>Edit Product</h2>
 
   <div class="w3-modal-content w3-card-4" style="max-width:600px">
     <div class="w3-center"><br>
@@ -40,7 +40,7 @@ Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
             </div>
 
             <div class="form-group w3-padding">
-              <%= f.submit "Create Product", class: 'w3-button w3-green w3-block w3-section w3-padding', :required => true %>
+              <%= f.submit "Update Product", class: 'w3-button w3-green w3-block w3-section w3-padding', :required => true %>
             </div>
 
           </div>
@@ -48,6 +48,8 @@ Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
       <% end %>
 
       <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <%= link_to "Show this product", @product %>
+        <br>
         <%= link_to "Back to products", products_path %>
       </div>
 
