--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,9 +1,1 @@
-<h1>New profile</h1>
-
-<%= render "form", profile: @profile %>
-
-<br>
-
-<div>
-  <%= link_to "Back to profiles", profiles_path %>
-</div>
+<%= render "form_new", profile: @profile %>
