--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,56 +1,63 @@
-<h1>Users</h1>
-<table style="width:100%">
-<!--  <tr>-->
-<!--    <th colspan="10">Registered Users</th>-->
-<!--  </tr>-->
-  <tr>
-    <th>ID</th>
-    <th>Email</th>
-    <th>Admin</th>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Created At</th>
-    <th>Sign In Count</th>
-    <th>Account Settings</th>
-    <th>View Profile</th>
-    <th>Account Details</th>
-  </tr>
-  <% @users.each do |user| %>
-    <tr>
-      <td>
-        <%= user.id %>
-      </td>
-      <td>
-        <%= user.email %>
-      </td>
-      <td>
-        <%= user.admin %>
-      </td>
-      <td>
-        <%= user.first_name %>
-      </td>
-      <td>
-        <%= user.last_name %>
-      </td>
-      <td>
-        <%= user.created_at %>
-      </td>
-      <td>
-        <%= user.sign_in_count %>
-      </td>
-      <td>
-        <%= link_to "View Settings", edit_user_registration_path %>
-      </td>
-      <td>
-        <% if user.profile.nil? %>
-          No Profile
-        <% else %>
-          <%= link_to "View Profile", profile_path(user.profile.id) %>
-        <% end %>
-      </td>
-      <td>
-        <%= link_to "View Details", user %>
-      </td>
-    </tr>
-  <% end %>
-</table>
+<!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1500px" id="band">
+  <h2>Users</h2>
+    <table style="width:100%">
+    <!--  <tr>-->
+    <!--    <th colspan="10">Registered Users</th>-->
+    <!--  </tr>-->
+      <tr>
+        <th>User ID</th>
+        <th>Email</th>
+        <th>Admin</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Created At</th>
+        <th>Sign In Count</th>
+        <th>Account Settings</th>
+        <th>View Profile</th>
+        <th>Account Details</th>
+      </tr>
+      <% @users.each do |user| %>
+        <tr>
+          <td>
+            <%= user.id %>
+          </td>
+          <td>
+            <%= user.email %>
+          </td>
+          <td>
+            <% if user.admin? %>
+              <i class="fa fa-check fa-fw w3-text-theme"></i>
+            <% else %>
+            <% end %>
+          </td>
+          <td>
+            <%= user.first_name %>
+          </td>
+          <td>
+            <%= user.last_name %>
+          </td>
+          <td>
+            <%= user.created_at %>
+          </td>
+          <td>
+            <%= user.sign_in_count %>
+          </td>
+          <td>
+            <%= link_to "View Settings", edit_user_registration_path, class: 'w3-button w3-small w3-blue w3-round-large w3-border-blue' %>
+          </td>
+          <td>
+            <% if user.profile.nil? %>
+              No Profile
+            <% else %>
+              <%= link_to "View Profile", profile_path(user.profile.id), class: 'w3-button w3-small w3-purple w3-round-large w3-border-purple' %>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to "View Details", user, class: 'w3-button w3-small w3-red w3-round-large w3-border-red' %>
+          </td>
+        </tr>
+      <% end %>
+    </table>
+</div>
