--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,36 @@
-<h1>Account Details</h1>
+<!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px" id="band">
+  <h2>Account Details</h2>
 
-<p>
-  <strong>Full Name:</strong>
-  <%= @user.full_name %>
-</p>
+  <div class="w3-modal-content w3-card-4" style="max-width:600px">
+    <div class="w3-center"><br>
+      <i class="fa fa-user-circle-o" aria-hidden="true" class="w3-circle w3-margin-top"></i>
 
-<p>
-  <strong>Account Type:</strong>
-  <%= @user.account_type %>
-</p>
+      <form class="w3-container">
+        <div class="w3-section">
 
-<% if current_user.id == @user.id || current_user.admin? %>
-    <%= link_to 'Edit Account Details', edit_user_path(@user.id), class: 'btn btn-primary' %>
-<% end %>
+          <hr>
+          <p>
+            <strong>Full Name:</strong>
+            <%= @user.full_name %>
+          </p>
+
+          <p>
+            <strong>Account Type:</strong>
+            <%= @user.account_type %>
+          </p>
+          <hr>
+
+        </div>
+      </form>
+
+      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <% if current_user.id == @user.id || current_user.admin? %>
+          <%= link_to 'Edit Account Details', edit_user_path(@user.id), class: 'w3-button w3-blue w3-round-large w3-border-blue w3-margin' %>
+        <% end %>
+      </div>
+
+    </div>
+  </div>
+</div>
