added html sanitization tag for added security

--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -7,6 +7,6 @@
   <hr>
 
   <div id="entry">
-    <%= @entry.valid_content.html_safe %>
+    <%= sanitize @entry.valid_content.html_safe %>
   </div>
 </div>
