--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -1,7 +1,11 @@
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1500px" id="band">
   <h2>Data Feeds</h2>
-  <%= link_to "Update Feeds", my_rake_task_path, :method => 'get', class: 'w3-left w3-button w3-red w3-round-large w3-border-red w3-margin' %>
-  <%= link_to "New feed", new_feed_path, class: 'w3-left w3-button w3-blue w3-round-large w3-border-blue w3-margin' %>
+  <% if user_signed_in? %>
+    <% if current_user.admin? %>
+      <%= link_to "Update Feeds", my_rake_task_path, :method => 'get', class: 'w3-left w3-button w3-red w3-round-large w3-border-red w3-margin' %>
+      <%= link_to "New Feed", new_feed_path, class: 'w3-left w3-button w3-blue w3-round-large w3-border-blue w3-margin' %>
+    <% end %>
+  <% end %>
   <table style="width:100%">
   <!--  <tr>-->
   <!--    <th colspan="8">Data Feeds</th>-->
@@ -13,8 +17,12 @@
       <th>Description</th>
       <th>Created At</th>
       <th>Last Updated</th>
-      <th>Settings</th>
       <th>Entries</th>
+      <% if user_signed_in? %>
+        <% if current_user.admin? %>
+          <th>Settings</th>
+        <% end %>
+      <% end %>
     </tr>
     <% @feeds.each do |feed| %>
       <tr>
@@ -37,11 +45,15 @@
           <%= feed.updated_at %>
         </td>
         <td>
-          <%= link_to "Feed Settings", feed, class: 'w3-button w3-small w3-green w3-round-large w3-border-green'%>
-        </td>
-        <td>
           <%= link_to "Feed Entries List", entries_path(feed.id), class: 'w3-button w3-small w3-purple w3-round-large w3-border-purple' %>
         </td>
+        <% if user_signed_in? %>
+          <% if current_user.admin? %>
+            <td>
+              <%= link_to "Feed Settings", feed, class: 'w3-button w3-small w3-green w3-round-large w3-border-green'%>
+            </td>
+          <% end %>
+        <% end %>
       </tr>
     <% end %>
   </table>
