--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -1,8 +1,8 @@
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="openNav()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="<%= root_path %>" class="w3-bar-item w3-button w3-padding-large w3-white">eCommerceApp</a>
+    <a id="hamburger" class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-hover-white" href="javascript:void(0);" onclick="openNav()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a id="companyLogo" href="<%= root_path %>" class="w3-bar-item w3-white"><%= image_tag "logos/logo.png", class: "", :style => "height:50px"%></a>
     <a href="<%= home_about_path %>" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">About Us</a>
     <a href="<%= feeds_path %>" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Inspire Me</a>
     <div class="w3-dropdown-hover w3-hide-small ">
