--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -3,7 +3,9 @@ Reference Description: W3 Templates for web pages using W3.CSS bootstrap-->
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
   <h2 class="w3-wide">About Us</h2>
   <p class="w3-opacity"><i>We love design</i></p>
-  <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p >
+    Welcome to the eCommerceApp! Using this application you can browse products, view design blogs, create users
+    accounts, sign in, order products, create a user profile, manage your account and view your order history! Click
+    Products link in the navbar to begin browsing our products.
+  </p>
 </div>
