--- a/app/views/order_items/index.html.erb
+++ b/app/views/order_items/index.html.erb
@@ -1,46 +1,65 @@
-<h1>Current Cart</h1>
 
-<p>
-  <%= link_to "Home", root_path %>
-</p>
-<p>
-  <%= link_to "Continue Shopping", products_path %>
-</p>
-<p>
-  <%= link_to pluralize(current_cart.items_count, 'item'), cart_path %>
-</p>
+@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+Reference Description: W3 Templates for web pages using W3.CSS Bootstrap
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+  <h2>Checkout Cart</h2>
 
-<table>
-  <thead>
-  <tr>
-    <td>Product</td>
-    <td>Price</td>
-    <td>Quantity</td>
-    <td></td>
-  </tr>
-  </thead>
-  <tbody>
-  <% @items.each do |item| %>
-    <tr>
-      <td><%= item.product.product_name %></td>
-      <td><%= number_to_currency item.price %></td>
-      <td><%= item.quantity %></td>
-      <td>
-        <%= form_for item, method: :delete do |f| %>
-          <%= f.submit "Remove" %>
+  <div class="w3-modal-content w3-card-4" style="max-width:600px">
+    <div class="w3-center"><br>
+      <i class="fa fa-cart-plus" aria-hidden="true" class="w3-circle w3-margin-top"></i>
+
+      <hr>
+      <table style="width:100%">
+        <thead>
+        <tr>
+          <td>Product</td>
+          <td>Price</td>
+          <td>Quantity</td>
+          <td></td>
+        </tr>
+        </thead>
+        <tbody>
+        <% @items.each do |item| %>
+          <tr>
+            <td><%= item.product.product_name %></td>
+            <td><%= number_to_currency item.price %></td>
+            <td><%= item.quantity %></td>
+            <td>
+              <%= form_for item, method: :delete do |f| %>
+                <%= f.submit "Remove" %>
+              <% end %>
+            </td>
+          </tr>
         <% end %>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-  <tfoot>
-    <td colspan="4" align="right">
-      <%= number_to_currency current_cart.sub_total %>
-    </td>
-    <td colspan="4" align="right">
-      <%= number_to_currency current_cart.total %>
-    </td>
-  </tfoot>
-</table>
+        </tbody>
+        <tfoot>
+        <td colspan="4" align="right">
+          <%= number_to_currency current_cart.sub_total %>
+        </td>
+        <td colspan="4" align="right">
+          <%= number_to_currency current_cart.total %>
+        </td>
+        </tfoot>
+      </table>
 
-<%= link_to 'Checkout', checkout_path %>
+      <hr>
+
+      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <%= link_to 'Checkout', checkout_path, class: 'w3-button w3-green w3-block w3-section w3-padding' %>
+      </div>
+
+      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <p>
+          <%= link_to pluralize(current_cart.items_count, 'item'), cart_path %>
+        </p>
+        <p>
+          <%= link_to "Home", root_path %>
+        </p>
+        <p>
+          <%= link_to "Continue Shopping", products_path %>
+        </p>
+      </div>
+
+    </div>
+  </div>
+</div>
