--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,23 +1,40 @@
-<h1>Checkout</h1>
+@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+Reference Description: W3 Templates for web pages using W3.CSS Bootstrap
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+  <h2>Checkout</h2>
 
-<%= form_for @order, url: checkout_path do |f| %>
+  <div class="w3-modal-content w3-card-4" style="max-width:600px">
+    <div class="w3-center"><br>
+      <i class="fa fa-cart-plus" aria-hidden="true" class="w3-circle w3-margin-top"></i>
 
-  <div class="form-group">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name %>
+      <%= form_for @order, url: checkout_path do |f| %>
+        <form class="w3-container">
+          <div class="w3-section">
+
+            <div class="form-group w3-padding">
+              <label class="w3-left"><b>First Name</b></label>
+              <%= f.text_field :first_name, class: 'form-control w3-input w3-border w3-margin-bottom', :required => true %>
+            </div>
+
+            <div class="form-group w3-padding">
+              <label class="w3-left"><b>Last Name</b></label>
+              <%= f.text_field :last_name, class: 'form-control w3-input w3-border w3-margin-bottom', :required => true %>
+            </div>
+
+            <div class="form-group w3-padding">
+              <%= f.submit 'Checkout', class: 'w3-button w3-green w3-block w3-section w3-padding'%>
+            </div>
+
+          </div>
+        </form>
+      <% end %>
+
+      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+        <p>
+          <%= link_to "Back to orders", orders_path %>
+        </p>
+      </div>
+    </div>
   </div>
-
-  <div class="form-group">
-    <%= f.label :last_name %>
-    <%= f.text_field :last_name %>
-  </div>
-
-  <%= f.submit 'Checkout' %>
-
-<% end %>
-
-<br>
-
-<div>
-  <%= link_to "Back to orders", orders_path %>
 </div>
+
