--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,12 @@
 Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1500px" id="band">
   <h2>Products</h2>
-  <%= link_to "New product", new_product_path, class: 'w3-left w3-button w3-blue w3-round-large w3-border-blue w3-margin' %>
+
+  <% if user_signed_in? %>
+    <% if current_user.admin? %>
+      <%= link_to "New product", new_product_path, class: 'w3-left w3-button w3-blue w3-round-large w3-border-blue w3-margin' %>
+    <% end %>
+  <% end %>
 
   <div class="w3-container">
     <% @products.each do |product|%>
