--- a/app/views/profiles/_form_edit.html.erb
+++ b/app/views/profiles/_form_edit.html.erb
@@ -1,40 +1,49 @@
 <!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
 Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
-<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-  <h2>Edit Profile</h2>
+<% if current_user.admin? || current_user.profile == @profile %>
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <h2>Edit Profile</h2>
 
-  <div class="w3-modal-content w3-card-4" style="max-width:600px">
-    <div class="w3-center"><br>
-      <i class="fa fa-user-circle-o" aria-hidden="true" class="w3-circle w3-margin-top"></i>
+    <div class="w3-modal-content w3-card-4" style="max-width:600px">
+      <div class="w3-center"><br>
+        <i class="fa fa-user-circle-o" aria-hidden="true" class="w3-circle w3-margin-top"></i>
 
-      <%= form_with(model: profile) do |f| %>
+        <%= form_with(model: profile) do |f| %>
 
-        <form class="w3-container">
-          <div class="w3-section">
+          <form class="w3-container">
+            <div class="w3-section">
 
-            <div class="form-group w3-padding">
-              <label class="w3-left"><b>Screen Name</b></label>
-              <%= f.text_field :screenname, class: 'form-control w3-input w3-border w3-margin-bottom', :required => true%>
+              <div class="form-group w3-padding">
+                <label class="w3-left"><b>Screen Name</b></label>
+                <%= f.text_field :screenname, class: 'form-control w3-input w3-border w3-margin-bottom', :required => true%>
+              </div>
+
+              <div class="form-group w3-padding">
+                <label class="w3-left"><b>City</b></label>
+                <%= f.text_field :city, class: 'form-control w3-input w3-border w3-margin-bottom', :required => true %>
+              </div>
+
+              <div class="form-group w3-padding">
+                <%= f.submit "Update Profile", class: 'w3-button w3-green w3-block w3-section w3-padding', :required => true %>
+              </div>
+
             </div>
+          </form>
+        <% end %>
 
-            <div class="form-group w3-padding">
-              <label class="w3-left"><b>City</b></label>
-              <%= f.text_field :city, class: 'form-control w3-input w3-border w3-margin-bottom', :required => true %>
-            </div>
+        <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
+          <%= link_to "Back", :back %><br>
+          <%= link_to "View other user profiles", profiles_path %>
+        </div>
 
-            <div class="form-group w3-padding">
-              <%= f.submit "Update Profile", class: 'w3-button w3-green w3-block w3-section w3-padding', :required => true %>
-            </div>
-
-          </div>
-        </form>
-      <% end %>
-
-      <div class="w3-container w3-border-top w3-padding-16 w3-light-grey">
-        <%= link_to "Back", :back %><br>
-        <%= link_to "View other user profiles", profiles_path %>
       </div>
-
     </div>
   </div>
-</div>
+<% else %>
+  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+    <i class="fa fa-exclamation-circle" aria-hidden="true" class="w3-circle w3-margin-top"></i>
+    <h2 class="w3-wide">Access Denied</h2>
+    <p class="w3-opacity"><i>Sorry, you don’t have permission to access this action.</i></p>
+    <p class="w3-center">Please return to the homepage to continue using the application.</p>
+  </div>
+<% end %>
