added references comments observers

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -5,7 +5,7 @@ Reference Description: W3 Templates for web pages using W3.CSS bootstrap-->
   <p class="w3-opacity"><i>We love design</i></p>
   <p >
     Welcome to the eCommerceApp! Using this application you can browse products, view design blogs, create users
-    accounts, sign in, order products, create a user profile, manage your account and view your order history! Click
+    accounts, sign in, order products, create a user profile, manage your account and view your order history! Click the
     Products link in the navbar to begin browsing our products.
   </p>
 </div>
