--- a/app/views/products/search.erb
+++ b/app/views/products/search.erb
@@ -1,5 +1,7 @@
-<!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
+<!--@Ref 1: https://www.w3schools.com/w3css/w3css_templates.asp
 Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
+<!--@Ref 2: https://www.youtube.com/watch?v=s88Uc0InOAM
+Reference Description: How to Implement a Search Feature in Ruby on Rails -->
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1500px" id="band">
   <h2>Search Results</h2>
 
