--- a/app/views/profiles/_activity_log.html.erb
+++ b/app/views/profiles/_activity_log.html.erb
@@ -1,7 +1,6 @@
+<!--@Ref: https://www.youtube.com/watch?v=oxdgYIHtlFc
+Ref Description: Gem Public Activity - add an Activity Feed to your app-->
 <table style="width:100%">
-<!--  <tr>-->
-<!--    <th colspan="6">Activity Log</th>-->
-<!--  </tr>-->
   <tr>
     <th>Date/Time</th>
     <th>Object</th>
