--- a/app/views/profiles/_tracking.html.erb
+++ b/app/views/profiles/_tracking.html.erb
@@ -1,7 +1,6 @@
+<!--@Ref: https://www.youtube.com/watch?v=7Rs6CT9G5AM
+Ref Description: Devise Trackable tutorial-->
 <table style="width:100%">
-<!--  <tr>-->
-<!--    <th colspan="5">User Login Information</th>-->
-<!--  </tr>-->
   <tr>
     <th>Sign In Count</th>
     <th>Current Sign In At</th>
