--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,6 +1,7 @@
 <!--@Ref: https://www.w3schools.com/w3css/w3css_templates.asp
 Reference Description: W3 Templates for web pages using W3.CSS Bootstrap -->
-
+<!--@Ref - https://www.youtube.com/watch?v=5OTgURghwdU
+Ref Description - user profiles tutorial-->
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:1000px" id="band">
   <h2><%= @profile.screenname %>'s Profile</h2>
 
