--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -44,13 +44,15 @@ Ref Description - user profiles tutorial-->
 
   <br>
 
-  <% if user_signed_in? %>
-    <% if current_user.admin? || current_user.profile == @profile %>
+  <%= render 'profiles/tracking' %>
+
+<!--  <%# if user_signed_in? %>
+    <%# if current_user.admin? || current_user.profile == @profile %>
       <h3>User Login Information</h3>
-      <%= render 'profiles/tracking' %>
+      <%#= render 'profiles/tracking' %>
       <br>
       <h3>Activity Log</h3>
-      <%= render 'profiles/activity_log' %>
-    <% end %>
-  <% end %>
+      <%#= render 'profiles/activity_log' %>
+    <%# end %>
+  <%# end %>-->
 </div>
