--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -46,6 +46,8 @@ Ref Description - user profiles tutorial-->
 
   <%= render 'profiles/tracking' %>
 
+  <%= render 'profiles/activity_log' %>
+
 <!--  <%# if user_signed_in? %>
     <%# if current_user.admin? || current_user.profile == @profile %>
       <h3>User Login Information</h3>
