--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -44,10 +44,6 @@ Ref Description - user profiles tutorial-->
 
   <br>
 
-  <% if user_signed_in? %>
-    <% if current_user.admin? || current_user.profile == @profile %>
-      <h3>Activity Log</h3>
-      <%= render 'profiles/activity_log' %>
-    <% end %>
-  <% end %>
+  <%= render 'profiles/tracking' %>
+
 </div>
