--- a/app/views/profiles/_tracking.html.erb
+++ b/app/views/profiles/_tracking.html.erb
@@ -3,8 +3,8 @@
     <th>Sign In Count</th>
     <th>Current Sign In At</th>
     <th>Last Signed In At</th>
-    <th>Current Sign In IP</th>
-    <th>Last Sign In IP</th>
+<!--    <th>Current Sign In IP</th>
+    <th>Last Sign In IP</th>-->
   </tr>
   <tr>
     <td>
@@ -16,11 +16,11 @@
     <td>
       <%= @user.last_sign_in_at %>
     </td>
-    <td>
-      <%= @user.current_sign_in_ip %>
+<!--    <td>
+      <%#= @user.current_sign_in_ip %>
     </td>
     <td>
-      <%= @user.last_sign_in_ip %>
-    </td>
+      <%#= @user.last_sign_in_ip %>
+    </td>-->
   </tr>
 </table>
