--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -44,6 +44,13 @@ Ref Description - user profiles tutorial-->
 
   <br>
 
-  <%= render 'profiles/tracking' %>
-
+  <% if user_signed_in? %>
+    <% if current_user.admin? || current_user.profile == @profile %>
+      <h3>User Login Information</h3>
+      <%= render 'profiles/tracking' %>
+      <br>
+      <h3>Activity Log</h3>
+      <%= render 'profiles/activity_log' %>
+    <% end %>
+  <% end %>
 </div>
