--- a/app/views/profiles/_activity_log.html.erb
+++ b/app/views/profiles/_activity_log.html.erb
@@ -1,3 +1,5 @@
+<!--@Ref: https://www.youtube.com/watch?v=oxdgYIHtlFc
+Ref Description: Gem Public Activity - add an Activity Feed to your app-->
 <table style="width:100%">
   <tr>
     <th>Date/Time</th>
